[package]
name = "bptree_rust"
version = "1.0.0"
edition = "2021"
authors = ["Assignment Implementation"]

[lib]
name = "bptree"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bptree_test"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
lazy_static = "1.4"
bincode = "2.0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
opt-level = 3