[package]
name = "bplus_tree_index"
version = "1.0.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "bplus_tree_index"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "driver"
path = "src/driver.rs"